# cubesat-flight-software

./: .gitignore  CMakeLists.txt  LICENSE  README.md
obc/: main.c
obc/comms/: commands.c  commands.h
obc/core/: power.c  power.h  scheduler.c  scheduler.h
obc/gnc/: attitude.c  attitude.h
obc/utils/: math_utils.c  math_utils.h
